--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.2.0",
+    "bcrypt": "^5.1.1",
     "elysia": "latest",
     "prisma": "^5.2.0"
   },
