--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.6.1",
+    "@elysiajs/jwt": "^0.6.4",
     "@prisma/client": "5.2.0",
     "elysia": "latest",
     "prisma": "^5.2.0"
