--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@elysiajs/cookie": "^0.6.1",
     "@elysiajs/jwt": "^0.6.4",
-    "@prisma/client": "5.2.0",
+    "@prisma/client": "latest",
     "elysia": "latest",
     "prisma": "^5.2.0"
   },
