--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@elysiajs/cookie": "^0.6.1",
     "@elysiajs/jwt": "^0.6.4",
-    "@prisma/client": "latest",
+    "@prisma/cli": "^2.20.1",
+    "@prisma/client": "^5.3.0",
     "elysia": "latest",
     "prisma": "^5.2.0"
   },
