--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "@elysiajs/cookie": "^0.6.1",
+    "@elysiajs/cors": "^0.6.0",
     "@elysiajs/jwt": "^0.6.4",
     "@prisma/cli": "^2.20.1",
-    "@prisma/client": "^5.3.0",
+    "@prisma/client": "latest",
     "elysia": "latest",
     "prisma": "^5.2.0"
   },
